[UI] change theme

--- a/sugar-shack-ui/src/styles/custom-theme.scss
+++ b/sugar-shack-ui/src/styles/custom-theme.scss
@@ -1,7 +1,7 @@
 /* Theme customizations */
-// $theme-colors: (
-//     "primary": #f5120c,
-// );
+$theme-colors: (
+  'primary': #ab0c0c
+);
 
 /* import bootstrap to set changes */
 @import '~bootstrap/scss/bootstrap';
