[UI] Add cart-view and product-detail-view

--- a/sugar-shack-ui/src/components/layout/layout.scss
+++ b/sugar-shack-ui/src/components/layout/layout.scss
@@ -1,7 +1,16 @@
+$navbar-text-color: #fff;
+
 .outlet-container {
   margin: 16px;
 }
 
 .navbar-brand {
-  color: #fff;
+  color: $navbar-text-color;
+  &:hover {
+    font-weight: 600;
+  }
+}
+
+.cart-btn.btn.btn-primary {
+  border-color: $navbar-text-color;
 }
